--- a/index.html
+++ b/index.html
@@ -31,11 +31,10 @@
         </nav>
 
         <header class="hero-header">
-            <div class="mascot-container">
-                <img src="raga.jpg" alt="Raga The Buffalo" class="raga-hero" id="ragaMascot">
-            </div>
-
-            <div class="hero-bottom-blend">
+            <div class="hero-content-centered">
+                <div class="icon-glow-wrapper">
+                    <img src="bull.png" class="hero-main-icon" alt="Bull Icon">
+                </div>
                 <button class="btn-cta" onclick="scrollToSplits()">
                     START TRAINING <i class="fa-solid fa-arrow-down"></i>
                 </button>
